--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tuomas Eerola at 2024-10-20 20:15:08 +0100 
+%% Created for Tuomas Eerola at 2024-10-21 19:36:12 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -766,8 +766,9 @@
 	title = {Sentiment extraction in music},
 	year = {1988}}
 
-@inproceedings{fairthorne_towards_1968,
+@inproceedings{fairthorne1968,
 	author = {Fairthorne, Robert A.},
+	date-modified = {2024-10-21 19:36:12 +0100},
 	publisher = {Archon Books},
 	title = {Towards information retrieval},
 	year = {1968}}
